syntax = "proto3";

package veranatest.validatorregistry.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "veranatest/validatorregistry/v1/params.proto";
import "veranatest/validatorregistry/v1/validator.proto";

option go_package = "veranatest/x/validatorregistry/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/veranatest/validatorregistry/v1/params";
  }

  // ListValidator Queries a list of Validator items.
  rpc GetValidator(QueryGetValidatorRequest) returns (QueryGetValidatorResponse) {
    option (google.api.http).get = "/veranatest/validatorregistry/v1/validator/{index}";
  }

  // ListValidator defines the ListValidator RPC.
  rpc ListValidator(QueryAllValidatorRequest) returns (QueryAllValidatorResponse) {
    option (google.api.http).get = "/veranatest/validatorregistry/v1/validator";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetValidatorRequest defines the QueryGetValidatorRequest message.
message QueryGetValidatorRequest {
  string index = 1;
}

// QueryGetValidatorResponse defines the QueryGetValidatorResponse message.
message QueryGetValidatorResponse {
  Validator validator = 1 [(gogoproto.nullable) = false];
}

// QueryAllValidatorRequest defines the QueryAllValidatorRequest message.
message QueryAllValidatorRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllValidatorResponse defines the QueryAllValidatorResponse message.
message QueryAllValidatorResponse {
  repeated Validator validator = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
